--- a/russian.tex
+++ b/russian.tex
@@ -39,14 +39,14 @@
 
   \vspace{-5mm}
   \section{\mysidestyle Обо мне}
-  Я студент, начинающий разрботчик. Я программирую 4 года; за
+  Я студент, начинающий разрабтчик. Я программирую 4 года; за
   это время я участвовал в разработке 44 репозиториев, отправил 921
-  комит и написал
+  коммит и написал
   176729 строчек кода. В прошлом профессиональный
   \href{https://github.com/alchemmist/CV/blob/main/attachments/sport.pdf}{волейболист}.
-  Так же я
+  Также я
   \href{https://www.avito.ru/moskva/predlozheniya_uslug/prepodavatel_programmirovaniya_na_python_2556461612}{преподаватель}
-  Python. Кофаундер и разработчик в \href{https://ballkit.ru/}{Баллкит}.
+  Python. Сооснователь и разработчик в \href{https://ballkit.ru/}{Баллкит}.
 
   \section{\mysidestyle Навыки}
 
@@ -56,15 +56,15 @@
     \item[Python:] \hangindent=9mm \hangafter=1
       \inlinecode{FastAPI}, \inlinecode{pydantic},
       \inlinecode{Flask},
-      \inlinecode{SqlAlchemy}, \inlinecode{faststream},
+      \inlinecode{SQLAlchemy}, \inlinecode{faststream},
       \inlinecode{alembic}, \inlinecode{pytest}.
     \item[Go:] \inlinecode{http}, \inlinecode{grpc},
       \inlinecode{protobuf}, \inlinecode{tgbotapi},
       \inlinecode{reflect}, \inlinecode{gofsm}.
     \item[Databases:] \inlinecode{postgres}, \inlinecode{sqlite},
       \inlinecode{redis}, \inlinecode{Yandex Object Storage}.
-    \item[Message brokers:] \inlinecode{RebbitMQ}, \inlinecode{Mosquitto}.
-    \item[Other techonologies:] \inlinecode{SQL}, \inlinecode{Java},
+    \item[Message brokers:] \inlinecode{RabbitMQ}, \inlinecode{Mosquitto}.
+    \item[Other technologies:] \inlinecode{SQL}, \inlinecode{Java},
       \inlinecode{JavaScript}, \inlinecode{bash}.
     \item[Dev tools:] \inlinecode{Docker}, \inlinecode{Podman},
       \inlinecode{Make}, \inlinecode{CI/CD}, \inlinecode{Linux},
@@ -72,26 +72,26 @@
   \end{description}
 
   \section{\mysidestyle Образование}
-  \href{https://centraluniversity.ru/}{Центральный Университет} -
+  \href{https://centraluniversity.ru/}{Центральный Университет} —
   Математика и компьютерные науки, 2028
 
-  \section{\mysidestyle Cертификаты}
+  \section{\mysidestyle Сертификаты}
   \textbf{Яндекс Лицей}. Экстерном поступил на второй курс
   \href{https://lyceum.yandex.ru/}{Лицея
-  Академии Яндекси} по Промышленной разработке и окончил его с
+  Академии Яндекса} по «Промышленной Разработке» и окончил его с
   \href{https://github.com/alchemmist/CV/blob/main/attachments/yandex-lyceum.pdf}{аттестатом
   с отличием}, сдав финальный проект на 100/100 баллов.
 
   \vspace{-6mm}
 
-  \hfill \textsl{Сентябрь 2022 - Апрель 2023}
+  \hfill \textsl{Сентябрь 2022 — Апрель 2023}
 
   \textbf{Курс Python}. Прошёл курс по Python на Stepik и завершил его с
   \href{https://github.com/alchemmist/CV/blob/main/attachments/stepik-python-course.pdf}{отличием}.
 
   \vspace{-3mm}
 
-  \hfill \textsl{Сентябрь 2021 - Апрель 2022}
+  \hfill \textsl{Сентябрь 2021 — Апрель 2022}
 
   \section{\mysidestyle Достижения}
   Прошёл в
@@ -104,7 +104,7 @@
   агрегирующего спортивные события по
   всей России. И разработал алгоритм обработки и проверки ежегодных
   государственных
-  отчетов о спортивных мероприятиях. Технический стек:
+  отчётов о спортивных мероприятиях. Технический стек:
   \inlinecode{Kafka}, \inlinecode{React}, \\
   \inlinecode{RabbitMQ (FastStream)},
   \inlinecode{FastAPI},
@@ -127,8 +127,8 @@
 
 \hfill \textsl{Апрель 2024}
 
-\textbf{Учстник хакаотна \href{https://nuclearhack.mephi.ru/}{Nuclear
-IT hack}}, где моя команда работала
+\textbf{Участник хакатона \href{https://nuclearhack.mephi.ru/}{Nuclear
+IT Hack}}, где моя команда работала
 над кейсом Росатома: сервис для определения эмоционального тона онлайн-встреч.
 
 \vspace{-6mm}
@@ -177,9 +177,9 @@ IT hack}}, где моя команда работала
       умного дома} \hfill
     \textsl{Сентябрь 2023 — Май 2024\vspace{1mm}}}\\
     Разработал
-    \href{https://www.figma.com/design/8H1tFpxgmIDV1xp06ndi73/SmartCab?node-id=0-1&p=f}{протопипы}
+    \href{https://www.figma.com/design/8H1tFpxgmIDV1xp06ndi73/SmartCab?node-id=0-1&p=f}{прототипы}
     дизайна админ панели и интерфейса планшета управления
-    (\textit{т.н. хаба}). Сверстал их
+    (\textit{т.н. "хаба"}). Сверстал их
     (\texttt{\href{https://github.com/smart-cab/smartcab-hub/tree/main/frontend/src}{1}},
     \texttt{\href{https://github.com/smart-cab/smartcab-dashboard/tree/main/frontend/src}{2}})
     на \inlinecode{React}.
@@ -199,19 +199,19 @@ IT hack}}, где моя команда работала
   \item[Starship]\small{\href{https://github.com/starship-crew}{Текстовая
       экшн игра в Telegram}
     \hfill \textsl{Март 2023 — Апрель 2023\vspace{1mm}}}\\
-    Разработал мехнику
+    Разработал механику
     \href{https://github.com/starship-crew/telegram-client/blob/main/app/handlers/fight.py}{онлайн
     дуэлей} с реальными игроками в Telegram боте. А
     так же удобный
     \href{https://github.com/starship-crew/telegram-client/blob/main/app/template.py}{движок
     рендеринга}
-    сообщений в чате через jinja2 шаблоны, так как для тектовой игры
-    требовалось гибко работоать с большим количеством сценарных и
-    пейзжаных текстов.
+    сообщений в чате через jinja2 шаблоны, так как для текстовой игры
+    требовалось гибко работать с большим количеством сценарных и
+    пейзажных текстов.
     Технологии:
     \inlinecode{Python}, \inlinecode{Flask},
     \inlinecode{alembic},
-    \inlinecode{python-telegram-bot}, \inlinecode{SqlAlchemy},
+    \inlinecode{python-telegram-bot}, \inlinecode{SQLAlchemy},
     \inlinecode{jinja2}.
 
     \vspace{3mm}
@@ -222,7 +222,7 @@ IT hack}}, где моя команда работала
     В команде разработали полнофункциональный модульный
     игровой движок с архитектурой
     \href{https://en.wikipedia.org/wiki/Entity_component_system#:~:text=Entity%E2%80%93component%E2%80%93system%20(ECS,Entity%E2%80%93Component%E2%80%93System%20layout.}{ECS}.
-      А так же survival top-down шутер игру о зомбиапокалипсисе.
+      А также survival top-down шутер игру о зомби-апокалипсисе.
       Технологии:
       \inlinecode{Python}, \inlinecode{Pygame},
       \inlinecode{esper}, \inlinecode{pytmx}, \inlinecode{aseprite},
@@ -238,12 +238,12 @@ IT hack}}, где моя команда работала
         \endgroup
         \hfill
       \textsl{Октябрь 2022 — Ноябрь 2022\vspace{1mm}}}\\
-      Разработал декстоп приложение на \inlinecode{PyQt6}. Настроил
+      Разработал декстоп-приложение на \inlinecode{PyQt6}. Настроил
       \href{https://github.com}{\texttt{pre-commit}} для
-      амтоматической конвертации \inlinecode{.ui} файлов в
-      \inlinecode{.py}, а так же \href{https://github.com}{actions}
+      автоматической конвертации \inlinecode{.ui} файлов в
+      \inlinecode{.py}, а также \href{https://github.com}{actions}
       для автоматической сборки нового релиза под все
-      операционные системы при каждом комите в main. Недавно перевол
+      операционные системы при каждом коммите в main. Недавно перевёл
       проект на \href{https://astral.sh/blog/uv}{\texttt{uv}} для
       удобного управления зависимостями.
       Технологии:
@@ -269,7 +269,7 @@ IT hack}}, где моя команда работала
       \begin{list2}
       \item{Разработал
           \href{https://github.com/alchemmist/vpn-bot}{бота} для
-          администрирования и продажи Wireguard
+          администрирования и продажи WireGuard
           ключей по подписке.
           \href{https://github.com/alchemmist/vpn-bot/blob/develop/vpn_bot/handlers/monthly_analytics.py}{Написал}
           наглядную
@@ -290,7 +290,7 @@ IT hack}}, где моя команда работала
         \vspace{2mm}
 
       \end{list2}
-    \item[Дрегие проекты]\small{
+    \item[Другие проекты]\small{
         \begingroup
         \textcolor{gray!40}{Публикация всех исходников согласована}
         \endgroup
@@ -305,20 +305,20 @@ IT hack}}, где моя команда работала
           разрешения капчи
           (\href{https://github.com/alchemmist/portu-hack/blob/develop/parser/parser/searcher/captcha.py}{\texttt{2}}),
           и
-          ветвистым обходом форм на сайте
+          ветвящимся обходом форм на сайте
           (\href{https://github.com/alchemmist/portu-hack/blob/develop/parser/parser/searcher/snif.py}{\texttt{3}}).
           Написал
           \href{https://github.com/alchemmist/portu-hack/blob/develop/parser/Dockerfile}{Docker
-          образ} для контейнеризированного парсинга
+          образ} для контейнеризованного парсинга
           \inlinecode{selenium} из под движка \texttt{Chromium}.
-          Настрил
+          Настроил
           \href{https://github.com/alchemmist/portu-hack/blob/develop/pre-commit-config.yaml}{\texttt{pre-commit}}
           хуки для линтера
-          \inlinecode{ruff} и сатического анализатора \inlinecode{pyright}.
+          \inlinecode{ruff} и статического анализатора \inlinecode{pyright}.
           Технологии: \inlinecode{Python}, \inlinecode{selenium},
           \inlinecode{psycopg},
-          \inlinecode{SqlALchemy},
-        \inlinecode{FastApi}.}
+          \inlinecode{SQLALchemy},
+        \inlinecode{FastAPI}.}
 
         \vspace{2mm}
 
@@ -327,6 +327,7 @@ IT hack}}, где моя команда работала
           % \hypersetup{urlcolor=blue!30}
           % \href{https://github.com/}{\texttt{release v0.0.1}}
           % \endgroup
+          % TODO: добавить релиз ?? если надо
           \href{https://github.com/alchemmist/outline-vpn-cli}{Cli-инструмент}
           для безопасного проведения операций на
           Outline серверах на тысячах клиентов.
@@ -335,7 +336,7 @@ IT hack}}, где моя команда работала
 
   \end{description}
 
-  \section{\mysidestyle Лабалаторные работы}\vspace{2mm}
+  \section{\mysidestyle Лабораторные работы}\vspace{2mm}
 
   \begin{description}
 
@@ -355,7 +356,7 @@ IT hack}}, где моя команда работала
       \inlinecode{React}.
 
       \textbf{Технологии:} \inlinecode{Java},
-      \inlinecode{SpringBoot}, \inlinecode{Lombok}
+      \inlinecode{SpringBoot}, \inlinecode{Lombok}, 
       \inlinecode{JavaScript}, \inlinecode{React}, \inlinecode{Go},
       \inlinecode{crypto}, \inlinecode{pgx}.
 
