--- a/russian.tex
+++ b/russian.tex
@@ -13,7 +13,7 @@
 
 \begin{document}
 
-{\sc \large Гришин Антон --- Backend разработчик} \\
+{\vspace*{-13mm}\sc \large Гришин Антон --- Backend разработчик} \\
 \begin{resume}
   \begin{minipage}[t]{0.55\textwidth}
     \section{\mysidestyle Персональная\\Информация}
@@ -32,21 +32,21 @@
   \end{minipage}
 
   \begin{minipage}[H]{0.18\textwidth}
-    \begin{textblock}{7}(10.84, 1.7)
+    \begin{textblock}{7}(10.84, 1.37)
       \includegraphics[width=0.27\textwidth]{images/avatar.png}
     \end{textblock}
   \end{minipage}
 
-  \vspace{-5mm}
+  \vspace{-7mm}
   \section{\mysidestyle Обо мне}
-  Я студент, начинающий разрабтчик. Я программирую 4 года; за
-  это время я участвовал в разработке 44 репозиториев, отправил 921
-  коммит и написал
-  176729 строчек кода. В прошлом профессиональный
+  Я студент, начинающий разрабтчик. Программирую 4 года, за
+  это время участвовал в разработке 44 репозиториев, отправил 921
+  коммит и написал 176729 строчек кода. В прошлом профессиональный
   \href{https://github.com/alchemmist/CV/blob/main/attachments/sport.pdf}{волейболист}.
   Также я
   \href{https://www.avito.ru/moskva/predlozheniya_uslug/prepodavatel_programmirovaniya_na_python_2556461612}{преподаватель}
-  Python. Сооснователь и разработчик в \href{https://ballkit.ru/}{Баллкит}.
+  Python, за все время обучил $> 30$ учеников. Сооснователь и
+  разработчик в \href{https://ballkit.ru/}{Баллкит}.
 
   \section{\mysidestyle Навыки}
 
@@ -76,305 +76,327 @@
   Математика и компьютерные науки, 2028
 
   \section{\mysidestyle Сертификаты}
-  \textbf{Яндекс Лицей}. Экстерном поступил на второй курс
+  \textbf{Яндекс Лицей}. Экстерном поступил на 2-й курс
   \href{https://lyceum.yandex.ru/}{Лицея
-  Академии Яндекса} по «Промышленной Разработке» и окончил его с
+  Академии Яндекса} по «Промышленной Разработке». Решил 236 задач,
+  реализовал и защитил 3 проекта, финальный на 100/100 баллов. Окончил с
   \href{https://github.com/alchemmist/CV/blob/main/attachments/yandex-lyceum.pdf}{аттестатом
-  с отличием}, сдав финальный проект на 100/100 баллов.
+  с отличием}.
 
   \vspace{-6mm}
 
   \hfill \textsl{Сентябрь 2022 — Апрель 2023}
 
-  \textbf{Курс Python}. Прошёл курс по Python на Stepik и завершил его с
+  \textbf{Курс Python}. Прошёл
+  \href{https://stepik.org/course/67}{курс} по \inlinecode{Python} на
+  Stepik. Выполнил 71
+  здание и завершил его с
   \href{https://github.com/alchemmist/CV/blob/main/attachments/stepik-python-course.pdf}{отличием}.
 
-  \vspace{-3mm}
+  \vspace{-7mm}
 
   \hfill \textsl{Сентябрь 2021 — Апрель 2022}
 
   \section{\mysidestyle Достижения}
   Прошёл в
-  \textbf{\href{https://github.com/alchemmist/CV/blob/main/attachments/russian-chemp-final.pdf}{финал}
-    Чемпионата России по спортивному
-  программированию,} где разработал
+  \textbf{финал}
+  (\href{https://github.com/alchemmist/CV/blob/main/attachments/russian-chemp-final.pdf}{\texttt{1}})
+  \href{https://events.fsp-russia.com/championship}{Чемпионата
+  России} по спортивному
+  программированию, среди 5000 участников. Разработал
   \href{https://github.com/alchemmist/CV/blob/main/attachments/architect.pdf}{микросервисную
-  архитектуру} для
-  \href{https://github.com/alchemmist/sportporg}{веб-приложения},
+  архитектуру} из 9 сервисов для
+  \href{https://github.com/alchemmist/sportprog}{веб-приложения},
   агрегирующего спортивные события по
-  всей России. И разработал алгоритм обработки и проверки ежегодных
+  всей России. И разработал
+  \href{https://github.com/alchemmist/sport-afisha/blob/main/event_parsing_service/parse_pdf.py}{алгоритм}
+  обработки и проверки ежегодных
   государственных
   отчётов о спортивных мероприятиях. Технический стек:
-  \inlinecode{Kafka}, \inlinecode{React}, \\
+  \inlinecode{Kafka}, \inlinecode{React},
   \inlinecode{RabbitMQ (FastStream)},
   \inlinecode{FastAPI},
-\inlinecode{OAuth}).
-% TODO: вложить хакатон на github и добавить ссылку
+  \inlinecode{OAuth}.
+  % TODO: вложить хакатон на github и добавить ссылку
 
-\vspace{-6mm}
+  \vspace{-6mm}
 
-\hfill \textsl{Декабрь 2024}
+  \hfill \textsl{Декабрь 2024}
 
-\textbf{\href{https://github.com/alchemmist/CV/blob/main/attachments/scince-for-life-win.pdf}{Победитель}
-научно-практической конференции}
-«\href{https://conf.profil.mos.ru/academ}{Наука для
-жизни}» с \href{https://github.com/smart-cab/}{проектом умного
-дома} для частных и государственных
-образовательных учреждений. Технический стек: \inlinecode{Redis},
-\inlinecode{Zigbee2MQTT}, \inlinecode{websockets}, \inlinecode{Go},
-\inlinecode{Python}, \inlinecode{Flask}, \inlinecode{React}.
-\vspace{-6mm}
+  \textbf{\href{https://github.com/alchemmist/CV/blob/main/attachments/scince-for-life-win.pdf}{Победитель}
+  научно-практической конференции}
+  «\href{https://conf.profil.mos.ru/academ}{Наука для
+  жизни}» среди 117 проектв с
+  \href{https://github.com/smart-cab/}{проектом умного
+  дома} для частных и государственных
+  образовательных учреждений. Технический стек: \inlinecode{Redis},
+  \inlinecode{Zigbee2MQTT}, \inlinecode{websockets}, \inlinecode{Go},
+  \inlinecode{Python}, \inlinecode{Flask}, \inlinecode{React}.
+  \vspace{-6mm}
 
-\hfill \textsl{Апрель 2024}
+  \hfill \textsl{Апрель 2024}
 
-\textbf{Участник хакатона \href{https://nuclearhack.mephi.ru/}{Nuclear
-IT Hack}}, где моя команда работала
-над кейсом Росатома: сервис для определения эмоционального тона онлайн-встреч.
+  \textbf{Участник хакатона \href{https://nuclearhack.mephi.ru/}{Nuclear
+  IT Hack}}, где моя команда 48 часов работала
+  над кейсом Росатома: сервис для определения эмоционального тона онлайн-встреч.
 
-\vspace{-6mm}
+  \vspace{-7mm}
 
-\hfill \textsl{Апрель 2024}
+  \hfill \textsl{Апрель 2024}
 
-\textbf{\href{https://github.com/alchemmist/CV/blob/main/attachments/informatics-olimpic.pdf}{Призёр}
-3-й степени}, олимпиады МПГУ по информатике:
-«Прикладная информатика»
-\vspace{-3mm}
+  \textbf{\href{https://github.com/alchemmist/CV/blob/main/attachments/informatics-olimpic.pdf}{Призёр}
+  3-й степени}, олимпиады МПГУ по информатике:
+  «Прикладная информатика»
+  \vspace{-2mm}
 
-\hfill \textsl{Июнь 2023}
+  \hfill \textsl{Июнь 2023}
+  \vspace{-4mm}
+  \section{\mysidestyle Интересы}\vspace{0.7mm}
 
-\section{\mysidestyle Интересы}\vspace{1mm}
-\begin{description}
-  \item[Формальная верификация:]
-    \href{https://github.com/alchemmist/coq-learning}{Прохожу} курс
-    \texttt{\href{https://softwarefoundations.cis.upenn.edu}{softwarefoundations}}
-    на \inlinecode{Coq}.
-  \item[Linux:] Arch, Hyprland, Neovim
-\end{description}
-\vfill
-% ------------------------------------------------------------------ %
+  {\textbf{Формальная верификация:} Прохожу курс
+    \texttt{\href{https://softwarefoundations.cis.upenn.edu}{softwarefoundations}}.
+    Прочитал первый том,
+    \href{https://github.com/alchemmist/coq-learning}{доказал} 250
+  теорем на \inlinecode{Coq}.} \\
 
-\section{\mysidestyle Опыт в стартапе}\vspace{2mm}
+  \vspace{-6mm}
 
-\begin{description}
+  \textbf{Linux:} Использую Arch с композитором Hyprland. Опубликовал
+  свои
+  \href{https:/github.com/alchemmist/.dotfiles}{\texttt{.dotfiles}}.
+  С нуля написал свой Neovim
+  \href{https://github.com/alchemmist/.dotfiles/tree/main/nvim}{конфиг}
+  и цветовую
+  \href{https://github.com/alchemmist/nothing.nvim}{тему}.
+  Написал 598 строчек кастомных
+  \href{https://github.com/alchemmist/.dotfiles/tree/main/scripts}{скриптов}.
 
-  \item[Patch Loyalty]\small Программа лояльности для малого бизнеса \hfill
-    \textsl{Июль 2024 — Август 2024\vspace{1mm}}\\
-    Разработал бота в Telegram по модели SMB (Single Message Bot) на
-    \inlinecode{Go} для коробочной системы лояльности
-    \href{https://ballkit.ru}{\texttt{ballkit.ru}}.
+  \vfill
+  % ------------------------------------------------------------------ %
 
-    \textbf{Технологии:}
-    \inlinecode{Go},
-    \inlinecode{tgbotapi}, \inlinecode{grpc},
-    \inlinecode{gofsm}.
-\end{description}
+  \section{\mysidestyle Опыт в стартапе}\vspace{2mm}
 
-\section{\mysidestyle Петпроекты}\vspace{2mm}
+  \begin{description}
 
-\begin{description}
+    \item[Patch Loyalty]\small Программа лояльности для малого бизнеса \hfill
+      \textsl{Июль 2024 — Август 2024\vspace{1mm}}\\
+      Разработал бота в Telegram по модели SMB (Single Message Bot) на
+      \inlinecode{Go} для коробочной системы лояльности
+      \href{https://ballkit.ru}{\texttt{ballkit.ru}}.
 
-  \item[SmartCab]\small{\href{https://github.com/smart-cab}{Система
-      умного дома} \hfill
-    \textsl{Сентябрь 2023 — Май 2024\vspace{1mm}}}\\
-    Разработал
-    \href{https://www.figma.com/design/8H1tFpxgmIDV1xp06ndi73/SmartCab?node-id=0-1&p=f}{прототипы}
-    дизайна админ панели и интерфейса планшета управления
-    (\textit{т.н. "хаба"}). Сверстал их
-    (\texttt{\href{https://github.com/smart-cab/smartcab-hub/tree/main/frontend/src}{1}},
-    \texttt{\href{https://github.com/smart-cab/smartcab-dashboard/tree/main/frontend/src}{2}})
-    на \inlinecode{React}.
-    \href{https://github.com/smart-cab/smartcab-bot}{Написал бота}
-    для администрирования системы.
-    \href{https://github.com/smart-cab/smartcab-hub/blob/main/backend/smartcab/interface/mqtt.py}{Реализовал}
-    взаимодействие с умными устройствами по протокулу Zigbee, через
-    брокер сообщений Mosquitto.
-    Технологии:
-    \inlinecode{Python}, \inlinecode{Go},
-    \inlinecode{JavaScript}, \inlinecode{bash},
-    \inlinecode{Flask},
-    \inlinecode{sqlite}, \inlinecode{redis},
-    \inlinecode{postgres}.
-    \vspace{3mm}
+      \textbf{Технологии:}
+      \inlinecode{Go},
+      \inlinecode{tgbotapi}, \inlinecode{grpc},
+      \inlinecode{gofsm}.
+  \end{description}
 
-  \item[Starship]\small{\href{https://github.com/starship-crew}{Текстовая
-      экшн игра в Telegram}
-    \hfill \textsl{Март 2023 — Апрель 2023\vspace{1mm}}}\\
-    Разработал механику
-    \href{https://github.com/starship-crew/telegram-client/blob/main/app/handlers/fight.py}{онлайн
-    дуэлей} с реальными игроками в Telegram боте. А
-    так же удобный
-    \href{https://github.com/starship-crew/telegram-client/blob/main/app/template.py}{движок
-    рендеринга}
-    сообщений в чате через jinja2 шаблоны, так как для текстовой игры
-    требовалось гибко работать с большим количеством сценарных и
-    пейзажных текстов.
-    Технологии:
-    \inlinecode{Python}, \inlinecode{Flask},
-    \inlinecode{alembic},
-    \inlinecode{python-telegram-bot}, \inlinecode{SQLAlchemy},
-    \inlinecode{jinja2}.
+  \section{\mysidestyle Петпроекты}\vspace{2mm}
 
-    \vspace{3mm}
+  \begin{description}
 
-  \item[Corpse]\small{\href{https://github.com/corpse-inc/corpse}{Игровой
-      движок}
-    \hfill \textsl{Ноябрь 2022 — Январь 2023\vspace{1mm}}}\\
-    В команде разработали полнофункциональный модульный
-    игровой движок с архитектурой
-    \href{https://en.wikipedia.org/wiki/Entity_component_system#:~:text=Entity%E2%80%93component%E2%80%93system%20(ECS,Entity%E2%80%93Component%E2%80%93System%20layout.}{ECS}.
-      А также survival top-down шутер игру о зомби-апокалипсисе.
+    \item[SmartCab]\small{\href{https://github.com/smart-cab}{Система
+        умного дома в школе} \hfill
+      \textsl{Сентябрь 2023 — Май 2024\vspace{1mm}}}\\
+      Разработал
+      \href{https://www.figma.com/design/8H1tFpxgmIDV1xp06ndi73/SmartCab?node-id=0-1&p=f}{прототипы}
+      дизайна админ панели и интерфейса планшета управления
+      (\textit{т.н. "хаба"}). Сверстал их
+      (\texttt{\href{https://github.com/smart-cab/smartcab-hub/tree/main/frontend/src}{1}},
+      \texttt{\href{https://github.com/smart-cab/smartcab-dashboard/tree/main/frontend/src}{2}})
+      на \inlinecode{React}.
+      \href{https://github.com/smart-cab/smartcab-bot}{Написал бота}
+      для администрирования системы.
+      \href{https://github.com/smart-cab/smartcab-hub/blob/main/backend/smartcab/interface/mqtt.py}{Реализовал}
+      взаимодействие с 5-ю умными устройствами по протокулу Zigbee, через
+      брокер сообщений Mosquitto, и 3 сценария в кабинете.
       Технологии:
-      \inlinecode{Python}, \inlinecode{Pygame},
-      \inlinecode{esper}, \inlinecode{pytmx}, \inlinecode{aseprite},
-      \inlinecode{Tiled}.
+      \inlinecode{Python}, \inlinecode{Go},
+      \inlinecode{JavaScript}, \inlinecode{bash},
+      \inlinecode{Flask},
+      \inlinecode{sqlite}, \inlinecode{redis},
+      \inlinecode{postgres}, \inlinecode{JsSip}.
+      \vspace{3mm}
+
+    \item[Starship]\small{\href{https://github.com/starship-crew}{Текстовая
+        экшн игра в Telegram}
+      \hfill \textsl{Март 2023 — Апрель 2023\vspace{1mm}}}\\
+      Разработал механику
+      \href{https://github.com/starship-crew/telegram-client/blob/main/app/handlers/fight.py}{онлайн
+      дуэлей} с реальными игроками в Telegram боте. А
+      так же удобный
+      \href{https://github.com/starship-crew/telegram-client/blob/main/app/template.py}{движок
+      рендеринга}
+      сообщений в чате через jinja2 шаблоны, так как для текстовой игры
+      требовалось гибко работать с большим количеством сценарных и
+      пейзажных текстов.
+      Технологии:
+      \inlinecode{Python}, \inlinecode{Flask},
+      \inlinecode{alembic},
+      \inlinecode{python-telegram-bot}, \inlinecode{SQLAlchemy},
+      \inlinecode{jinja2}.
 
       \vspace{3mm}
 
-    \item[SchoolRing]\small{\href{https://github.com/alchemmist/school-ring}{Управление
-        звонками в школах}
-        \begingroup
-        \hypersetup{urlcolor=blue!30}
-        \href{https://github.com/}{\texttt{release v0.0.2}}
-        \endgroup
-        \hfill
-      \textsl{Октябрь 2022 — Ноябрь 2022\vspace{1mm}}}\\
-      Разработал декстоп-приложение на \inlinecode{PyQt6}. Настроил
-      \href{https://github.com}{\texttt{pre-commit}} для
-      автоматической конвертации \inlinecode{.ui} файлов в
-      \inlinecode{.py}, а также \href{https://github.com}{actions}
-      для автоматической сборки нового релиза под все
-      операционные системы при каждом коммите в main. Недавно перевёл
-      проект на \href{https://astral.sh/blog/uv}{\texttt{uv}} для
-      удобного управления зависимостями.
-      Технологии:
-      \inlinecode{Python}, \inlinecode{PyQt6},
-      \inlinecode{threading}, \inlinecode{schedule}.
-      % TODO: сделать рабочий релиз
-      % TODO: настроить pre-commit для .ui -> .py (написать об этом здесь)
-      % TODO: перехать только на pyqt6
-      % TODO: настроить pre-commit и добавить ссылку на файл
-      % TODO: подконец исправить версию релиза
+    \item[Corpse]\small{\href{https://github.com/corpse-inc/corpse}{Игровой
+        движок}
+      \hfill \textsl{Ноябрь 2022 — Январь 2023\vspace{1mm}}}\\
+      В команде разработали полнофункциональный модульный
+      игровой движок с архитектурой
+      \href{https://en.wikipedia.org/wiki/Entity_component_system#:~:text=Entity%E2%80%93component%E2%80%93system%20(ECS,Entity%E2%80%93Component%E2%80%93System%20layout.}{ECS}.
+        А также survival top-down шутер игру о зомби-апокалипсисе.
+        Технологии:
+        \inlinecode{Python}, \inlinecode{Pygame},
+        \inlinecode{esper}, \inlinecode{pytmx}, \inlinecode{aseprite},
+        \inlinecode{Tiled}.
 
-  \end{description}
+        \vspace{3mm}
 
-  \section{\mysidestyle Заказная разработка}\vspace{2mm}
+      \item[SchoolRing]\small{\href{https://github.com/alchemmist/school-ring}{Управление
+          звонками в школах}
+          \begingroup
+          \hypersetup{urlcolor=blue!30}
+          \href{https://github.com/}{\texttt{release v0.0.2}}
+          \endgroup
+          \hfill
+        \textsl{Октябрь 2022 — Ноябрь 2022\vspace{1mm}}}\\
+        Разработал декстоп-приложение на \inlinecode{PyQt6}. Настроил
+        \href{https://github.com}{\texttt{pre-commit}} для
+        автоматической конвертации \inlinecode{.ui} файлов в
+        \inlinecode{.py}, а также \href{https://github.com}{actions}
+        для автоматической сборки нового релиза под все
+        операционные системы при каждом коммите в main. Недавно перевёл
+        проект на \href{https://astral.sh/blog/uv}{\texttt{uv}} для
+        удобного управления зависимостями.
+        Технологии:
+        \inlinecode{Python}, \inlinecode{PyQt6},
+        \inlinecode{threading}, \inlinecode{schedule}.
+        % TODO: сделать рабочий релиз
+        % TODO: настроить pre-commit для .ui -> .py (написать об этом здесь)
+        % TODO: перехать только на pyqt6
+        % TODO: настроить pre-commit и добавить ссылку на файл
+        % TODO: подконец исправить версию релиза
 
-  \begin{description}
-    \item[Telegram боты]\small{
-        \begingroup
-        \textcolor{gray!40}{Публикация всех исходников согласована}
-        \endgroup
-      }{\hfill
-      \textsl{Лето 2024}}\vspace{2mm}
-      \begin{list2}
-      \item{Разработал
-          \href{https://github.com/alchemmist/vpn-bot}{бота} для
-          администрирования и продажи WireGuard
-          ключей по подписке.
-          \href{https://github.com/alchemmist/vpn-bot/blob/develop/vpn_bot/handlers/monthly_analytics.py}{Написал}
-          наглядную
-          \href{https://github.com/alchemmist/vpn-bot/tree/develop?tab=readme-ov-file#demo}{аналитику}
-          по клиентам прямо в боте.
-          Технологии: \inlinecode{Python}, \inlinecode{sqlite},
-          \inlinecode{python-telegram-bot}.
-        }
-        \vspace{2mm}
-      \item{\href{https://github.com/alchemmist/content-parser}{Бот}
-          для агрегирования релевантных сообщений из чатов, каналов и
-          групп по ключевым словам.
-          Технологии:
-          \inlinecode{Python},
-          \inlinecode{theleton}, \inlinecode{redis}
-        }
+    \end{description}
 
-        \vspace{2mm}
+    \section{\mysidestyle Заказная разработка}\vspace{2mm}
 
-      \end{list2}
-    \item[Другие проекты]\small{
-        \begingroup
-        \textcolor{gray!40}{Публикация всех исходников согласована}
-        \endgroup
-      }{\hfill
-      \textsl{Лето 2024}}\vspace{2mm}
-      \begin{list2}
+    \begin{description}
+      \item[Telegram боты]\small{
+          \begingroup
+          \textcolor{gray!40}{\textit{Публикация всех исходников согласована}}
+          \endgroup
+        }{\hfill
+        \textsl{Лето 2024}}\vspace{2mm}
+        \begin{list2}
+        \item{Разработал
+            \href{https://github.com/alchemmist/vpn-bot}{бота} для
+            администрирования и продажи WireGuard
+            ключей по подписке.
+            \href{https://github.com/alchemmist/vpn-bot/blob/develop/vpn_bot/handlers/monthly_analytics.py}{Написал}
+            наглядную
+            \href{https://github.com/alchemmist/vpn-bot/tree/develop?tab=readme-ov-file#demo}{аналитику}
+            по клиентам прямо в боте.
+            Технологии: \inlinecode{Python}, \inlinecode{sqlite},
+            \inlinecode{python-telegram-bot}.
+          }
+          \vspace{2mm}
+        \item{\href{https://github.com/alchemmist/content-parser}{Бот}
+            для агрегирования релевантных сообщений из чатов, каналов и
+            групп по ключевым словам.
+            Технологии:
+            \inlinecode{Python},
+            \inlinecode{theleton}, \inlinecode{redis}
+          }
 
-      \item{
-          \href{https://github.com/alchemmist/portu-hack}{Парсер}
-          португальского посольства с механизмами авторизации
-          (\href{https://github.com/alchemmist/portu-hack/blob/develop/parser/parser/searcher/auth.py}{\texttt{1}}),
-          разрешения капчи
-          (\href{https://github.com/alchemmist/portu-hack/blob/develop/parser/parser/searcher/captcha.py}{\texttt{2}}),
-          и
-          ветвящимся обходом форм на сайте
-          (\href{https://github.com/alchemmist/portu-hack/blob/develop/parser/parser/searcher/snif.py}{\texttt{3}}).
-          Написал
-          \href{https://github.com/alchemmist/portu-hack/blob/develop/parser/Dockerfile}{Docker
-          образ} для контейнеризованного парсинга
-          \inlinecode{selenium} из под движка \texttt{Chromium}.
-          Настроил
-          \href{https://github.com/alchemmist/portu-hack/blob/develop/pre-commit-config.yaml}{\texttt{pre-commit}}
-          хуки для линтера
-          \inlinecode{ruff} и статического анализатора \inlinecode{pyright}.
-          Технологии: \inlinecode{Python}, \inlinecode{selenium},
-          \inlinecode{psycopg},
-          \inlinecode{SQLALchemy},
-        \inlinecode{FastAPI}.}
+          \vspace{2mm}
 
-        \vspace{2mm}
+        \end{list2}
+      \item[Другие проекты]\small{
+          \begingroup
+          \textcolor{gray!40}{\textit{Публикация всех исходников согласована}}
+          \endgroup
+        }{\hfill
+        \textsl{Лето 2024}}\vspace{2mm}
+        \begin{list2}
 
-      \item{
-          % \begingroup
-          % \hypersetup{urlcolor=blue!30}
-          % \href{https://github.com/}{\texttt{release v0.0.1}}
-          % \endgroup
-          % TODO: добавить релиз ?? если надо
-          \href{https://github.com/alchemmist/outline-vpn-cli}{Cli-инструмент}
-          для безопасного проведения операций на
-          Outline серверах на тысячах клиентов.
-        Технологии: \inlinecode{Python}.}
-      \end{list2}
+        \item{
+            \href{https://github.com/alchemmist/portu-hack}{Парсер}
+            португальского посольства с механизмами авторизации
+            (\href{https://github.com/alchemmist/portu-hack/blob/develop/parser/parser/searcher/auth.py}{\texttt{1}}),
+            разрешения капчи
+            (\href{https://github.com/alchemmist/portu-hack/blob/develop/parser/parser/searcher/captcha.py}{\texttt{2}}),
+            и
+            ветвящимся обходом форм на сайте
+            (\href{https://github.com/alchemmist/portu-hack/blob/develop/parser/parser/searcher/snif.py}{\texttt{3}}).
+            Написал
+            \href{https://github.com/alchemmist/portu-hack/blob/develop/parser/Dockerfile}{Docker
+            образ} для контейнеризованного парсинга
+            \inlinecode{selenium} из под движка \texttt{Chromium}.
+            Настроил
+            \href{https://github.com/alchemmist/portu-hack/blob/develop/pre-commit-config.yaml}{\texttt{pre-commit}}
+            хуки для линтера
+            \inlinecode{ruff} и статического анализатора \inlinecode{pyright}.
+            Технологии: \inlinecode{Python}, \inlinecode{selenium},
+            \inlinecode{psycopg},
+            \inlinecode{SQLALchemy},
+          \inlinecode{FastAPI}.}
 
-  \end{description}
+          \vspace{2mm}
 
-  \section{\mysidestyle Лабораторные работы}\vspace{2mm}
+        \item{
+            % \begingroup
+            % \hypersetup{urlcolor=blue!30}
+            % \href{https://github.com/}{\texttt{release v0.0.1}}
+            % \endgroup
+            % TODO: добавить релиз ?? если надо
+            \href{https://github.com/alchemmist/outline-vpn-cli}{Cli-инструмент}
+            для безопасного проведения операций на
+            Outline серверах на тысячах клиентов.
+          Технологии: \inlinecode{Python}.}
+        \end{list2}
 
-  \begin{description}
+    \end{description}
 
-    \item[BookSwap]\small{\href{https://github.com/alchemmist/bookswap}{Сервис
-        обмена книгами} \hfill
-      \textsl{Май 2024\vspace{1mm}}}\\
-      \href{https://github.com/alchemmist/bookswap/blob/dev/docs/database.md}{Спроектировал}
-      базу данных
-      (\href{https://github.com/alchemmist/bookswap/blob/dev/backend/src/main/resources/schema.sql}{\texttt{1}}).
-      Написал
-      \href{https://github.com/alchemmist/bookswap/tree/dev/backend}{бэкенд}
-      с ключевой бизнес-логикой на \inlinecode{Spring} и
-      \href{https://github.com/alchemmist/bookswap/tree/dev/auth-service}{сервис
-      авторизации} на \inlinecode{Go}, а так же
-      \href{https://github.com/alchemmist/bookswap/tree/dev/frontend}{фронтенд}
-      на
-      \inlinecode{React}.
+    \section{\mysidestyle Лабораторные работы}\vspace{2mm}
 
-      \textbf{Технологии:} \inlinecode{Java},
-      \inlinecode{SpringBoot}, \inlinecode{Lombok}, 
-      \inlinecode{JavaScript}, \inlinecode{React}, \inlinecode{Go},
-      \inlinecode{crypto}, \inlinecode{pgx}.
+    \begin{description}
 
-  \end{description}
-\end{resume}
+      \item[BookSwap]\small{\href{https://github.com/alchemmist/bookswap}{Сервис
+          обмена книгами} \hfill
+        \textsl{Май 2024\vspace{1mm}}}\\
+        \href{https://github.com/alchemmist/bookswap/blob/dev/docs/database.md}{Спроектировал}
+        базу данных
+        (\href{https://github.com/alchemmist/bookswap/blob/dev/backend/src/main/resources/schema.sql}{\texttt{1}}).
+        Написал
+        \href{https://github.com/alchemmist/bookswap/tree/dev/backend}{бэкенд}
+        с ключевой бизнес-логикой на \inlinecode{Spring} и
+        \href{https://github.com/alchemmist/bookswap/tree/dev/auth-service}{сервис
+        авторизации} на \inlinecode{Go}, а так же
+        \href{https://github.com/alchemmist/bookswap/tree/dev/frontend}{фронтенд}
+        на
+        \inlinecode{React}.
 
-\begin{minipage}[H]{9.18\textwidth}
-  \begin{textblock}{7}(-0.65, 15.1)
-    \begingroup
-    \hspace{35mm}
-    \hypersetup{urlcolor=gray!90}
-    \large
-    \href{https://github.com/alchemmist}{→ больше проектв на \underline{GitHub}}
-    \endgroup
-  \end{textblock}
+        \textbf{Технологии:} \inlinecode{Java},
+        \inlinecode{SpringBoot}, \inlinecode{Lombok},
+        \inlinecode{JavaScript}, \inlinecode{React}, \inlinecode{Go},
+        \inlinecode{crypto}, \inlinecode{pgx}.
 
-\end{minipage}
+    \end{description}
+  \end{resume}
 
-\clearpage
+  \begin{minipage}[H]{9.18\textwidth}
+    \begin{textblock}{7}(-0.65, 15.1)
+      \begingroup
+      \hspace{35mm}
+      \hypersetup{urlcolor=gray!90}
+      \large
+      \href{https://github.com/alchemmist}{→ больше проектв на
+      \underline{GitHub}}
+      \endgroup
+    \end{textblock}
 
-\end{document}
+  \end{minipage}
+
+  \clearpage
+
+  \end{document}
